samples/_failures_safe/1761301238_294652_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e65a1eeb.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_e65a1eeb.c:180:5: error: expected declaration or statement at end of input
  180 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_e65a1eeb.c:180:5: error: expected declaration or statement at end of input
